# binconv

./: .gitignore  CMakeLists.txt  README.md
include/binconv/: convert.h  input.h  menu.h
src/: convert.c  input.c  main.c  menu.c
